# src/app/infrastructure/database/actions/weather.ts
@@ -1,16 +1,11 @@
 import { WeatherModel } from '../models/weather';
 import { Weather } from '../../../shared/models/weather';
 
-export const getConversations = async (conversationIds: string[]): Promise<any> => {
+export const getWeathers = async (): Promise<Weather[]> => {
     try {
-        const conversationsDb = await WeatherModel.find().lean()
-        const conversationsDbIds = conversationsDb.map((conversation: any) => conversation.conversationId)
-        const conversationIdsToRemove = conversationsDbIds.filter((conversation: string) => !conversationIds.includes(conversation))
-        
-        const start = new Date().getTime();
-        const lag = new Date().getTime() - start;
+        const weathersDb = await WeatherModel.find().lean()
 
-        return conversationsDb.filter((conversation: any) => !conversationIdsToRemove.includes(conversation.conversationId))
+        return weathersDb.map((weather: any) => new Weather(weather.from, weather.to, weather.location, weather.temp, weather.rain));
     } catch (err) {
         console.error('Error from import data from database', err);
         throw err
